tests/facebook_fbs_none/facebook_fbs_none.exp
Error ------------------------------------------------------------------------------------------------------ main.js:3:1

Cannot cast `<fbs />` to number because React element [1] is incompatible with number [2]. [incompatible-type]

   main.js:3:1
   3| <fbs /> as number; // Error: ReactElement ~> number
      ^^^^^^^ [1]

References:
   main.js:3:12
   3| <fbs /> as number; // Error: ReactElement ~> number
                 ^^^^^^ [2]



Found 1 error
